--- a/frontend/src/app/products/pages/products/products.component.html
+++ b/frontend/src/app/products/pages/products/products.component.html
@@ -1,14 +1,17 @@
 <app-header></app-header>
-<div class="page">
-  <div class="box-products">
-    <div *ngFor="let product of products" class="box-for-products">
-      <div class="card-productos">
-        <img [src]="product.img" alt="">
-        <h2>Nombre: {{ product.name }}</h2>
-        
-        <p class="">Precio: {{ product.price|currency }}</p>
-        
-        <button (click)="goToProductDetails(product.id)">Ver mas</button>
+<div class="box">
+  <div *ngFor="let product of products">
+    <div class="card">
+      <div class="card__img-box">
+        <img [src]="product.img" alt="{{product.name}}">
+      </div>
+      <div class="card__info">
+        <h2 class="card__title">{{ product.name }}</h2>
+        <div class="card__price-details">
+          <p *ngIf="product.discount" class="card__price">precio: {{ product.discountedPrice|currency }}</p>
+          <p *ngIf="!product.discount" class="card__price">precio: {{ product.price|currency }}</p>
+        </div>
+        <button class="card__button" (click)="goToProductDetails(product.id)">Ver más</button>
       </div>
     </div>
   </div>
