--- a/frontend/src/app/welcome/pages/about/about.component.css
+++ b/frontend/src/app/welcome/pages/about/about.component.css
@@ -1,11 +1,16 @@
 .about-us-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
     text-align: center;
-    margin: 20px;
+    position: relative; 
   }
   
-  .about-us-img {
+  .about-us-section img {
     max-width: 100%;
     height: auto;
+    margin-bottom: 20px;
   }
   
   .about-us-section p {
@@ -13,6 +18,16 @@
     line-height: 1.5;
   }
   
+  
+  .about-us-section::after {
+    content: "";
+    width: 100%;
+    height: 1px;
+    background-color: #ccc;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+  }
   
   @media (max-width: 768px) {
     .about-us-section {
