--- a/frontend/src/app/cart/pages/cart/cart.component.html
+++ b/frontend/src/app/cart/pages/cart/cart.component.html
@@ -1,5 +1,15 @@
 <app-header></app-header>
 <div class="page">
-  <h1>Cart page</h1>
+  <div class="cart-content">
+    <hr>
+    <div class="cart-total">
+      <h3 class="cart-total__h3">
+        Total: $12222
+      </h3>
+      <Button class="btn btn-success text-md">
+        Continuar compra
+      </Button>
+    </div>
+  </div>
 </div>
 <app-footer></app-footer>
