actualizo seccion nosotros

--- a/frontend/src/app/welcome/pages/about/about.component.html
+++ b/frontend/src/app/welcome/pages/about/about.component.html
@@ -1,7 +1,8 @@
 <app-header></app-header>
-<div class="about-us-section">
+<div class="page">
+<div class="about-us-seccion">
   <h1 class="text-bold">Nosotros:</h1>
-  <div class="about-us-section">
+  <div class="about-us-seccion">
     <img class="hero__img" src="assets/curvaTostado.png"  alt="">
   </div>
     <p>&nbsp;</p>
@@ -9,9 +10,9 @@
   <p>Disfrutar y evolucionar el espíritu: Una persona, una taza y una amistad en puerta.</p>
 
 <hr class="my-4">
-<div class="about-us-section">
+<div class="about-us-seccion">
   <h1 class="text-bold">Nuestro Capuccino:</h1>
-  <div class="about-us-section">
+  <div class="about-us-seccion">
     <img src="assets/Cappuccino.png" alt="">
   </div>
   <p>&nbsp;</p>
@@ -19,18 +20,18 @@
 </div>
 <hr class="my-4">
 
-<div class="about-us-section">
+<div class="about-us-seccion">
   <h1 class="text-bold"> Nuestro Trabajo:</h1>
-  <div class="about-us-section">
+  <div class="about-us-seccion">
     <img src="assets/cafe.jpeg" width="300" height="237" alt="">
   </div>
   <p>&nbsp;</p>
   <p>Para nosotros es una pasion, porque lo que hacemos no es sólo un trabajo, es nuestra vida. Juntos, adoptamos la diversidad para crear un lugar que nos permita a cada uno ser unico. Nos valoramos de acuerdo a nuestros principios de trabajo.</p>
 </div>
 <hr class="my-4">
-<div class="about-us-section">
+<div class="about-us-seccion">
   <h1 class="text-bold">Nuestra comunidad:</h1>
-  <div class="about-us-section">
+  <div class="about-us-seccion">
     <img src="assets/hero.jpg" width="500" height="237" alt="">
   </div>
   <p>&nbsp;</p>
@@ -38,5 +39,5 @@
 </div>
 <hr class="my-4">
 </div>
-
+</div>
 <app-footer></app-footer>
