--- a/frontend/src/app/welcome/pages/about/about.component.css
+++ b/frontend/src/app/welcome/pages/about/about.component.css
@@ -1,4 +1,4 @@
-.about-us-section {
+.about-us-seccion {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -6,38 +6,38 @@
     text-align: center;
   }
   
-  .about-us-section img {
+  .about-us-seccion img {
     max-width: 100%;
     height: auto;
     margin-bottom: 20px;
   }
   
-  .about-us-section p {
+  .about-us-seccion p {
     font-size: 16px;
     line-height: 1.5;
   }
   
   /* Media queries */
   @media (max-width: 768px) {
-    .about-us-section {
+    .about-us-seccion {
       padding: 10px;
     }
   
-    .about-us-section img {
+    .about-us-seccion img {
       margin-bottom: 10px;
     }
   
-    .about-us-section p {
+    .about-us-seccion p {
       font-size: 14px;
     }
   }
   
   @media (max-width: 480px) {
-    .about-us-section {
+    .about-us-seccion {
       padding: 5px;
     }
   
-    .about-us-section p {
+    .about-us-seccion p {
       font-size: 12px;
     }
   }
