--- a/frontend/src/app/products/pages/product-details/product-details.component.html
+++ b/frontend/src/app/products/pages/product-details/product-details.component.html
@@ -9,10 +9,11 @@
       </div>
       <div class="generaltext">
         <div class="col-md-4 text-details ">
-          <h2>Nombre: {{ product.name }}</h2>
-          <p>Descripción: {{ product.description }}</p>
-          <p class="">Precio: {{ product.price|currency }}</p>
-          <p>Categoria: {{product.category}}</p>
+          <h2>{{ product.name }}</h2>
+          <p class="generaltext__parrafo1"><b>Descripción:</b> {{ product.description }}</p>
+          <p class="generaltext__parrafo2"><b>Categoría:</b> {{product.category}}</p>
+          <p class="price-estilo">Precio: {{ product.price|currency }}</p>
+          <button>Agregar Carrito 🛒</button>
         </div>
       </div>
     </div>
