--- a/frontend/src/app/products/pages/product-details/product-details.component.css
+++ b/frontend/src/app/products/pages/product-details/product-details.component.css
@@ -54,7 +54,7 @@
 .generaltext button{
     color: #fff;
     padding: 3px 5px 5px 5px;
-    margin: 0 0 5px 10px;
+    margin: 0 0 10px 0;
     font-size: 20px;
     border-radius: 10px;
     border-style: none;
