--- a/frontend/src/app/products/pages/product-details/product-details.component.css
+++ b/frontend/src/app/products/pages/product-details/product-details.component.css
@@ -13,12 +13,33 @@
     grid-template-columns: 1fr 1fr;
 }
 
+.caja-img img{
+    padding: 50px;
+    background-color: green;
+    transition: transform .5s;
+    width: 200px;
+    height: 200px;
+    margin: 0 auto;
+    background: rgba(255, 255, 255, 0.06);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(2.1px);
+    -webkit-backdrop-filter: blur(2.1px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.caja-img img:hover{
+    -ms-transform: scale(1.5); /* IE 9 */
+    -webkit-transform: scale(1.5); /* Safari 3-8 */
+    transform: scale(1.5); 
+}
+
 .text-details{
     width: auto;
-    height: auto;
+    height: 55vh;
     border: 2px solid #8b5e34;
     background-color: #f2f4f3;
-    box-shadow: 20px 20px 50px grey;
+    box-shadow: 20px 20px 50px #7f5539;
     border-radius: 15px;
     font-size: 20px;
     padding: 15px 5px 5px 20px;
@@ -60,4 +81,9 @@
     border-radius: 10px;
     border-style: none;
     background-color: #774936;
+    transition: all .5s;
+}
+
+.generaltext button:hover{
+    box-shadow: 20px 20px 10px #7f5539;
 }
