--- a/frontend/src/app/cart/pages/cart/cart.component.css
+++ b/frontend/src/app/cart/pages/cart/cart.component.css
@@ -1,20 +1,22 @@
 .cart-content {
   padding: 10px;
+  max-width: 60rem;
+  margin: 0 auto;
   padding-block: 30px;
   width: 100%;
   height: 100%;
   border-radius: 10px;
-  border: 1px solid #adadad;
+  /* border: 1px solid #adadad; */
   background-color: var(--white);
 }
-.cart-total {
+.cart-footer {
   margin-top: 2rem;
   display: flex;
   flex-direction: column;
   gap: 2rem;
   align-items: flex-end;
 }
-.cart-total__h3 {
+.cart-footer__h3 {
   font-size: 1.8rem;
   font-weight: bold;
 }
