--- a/frontend/src/app/products/pages/product-details/product-details.component.html
+++ b/frontend/src/app/products/pages/product-details/product-details.component.html
@@ -4,8 +4,8 @@
     <div class="row w-100 caja-detalle align-items-center">
       <div class="col-md-8">
         <div class="caja-img">
-          <img [src]="product.img" class="float-end" alt="" >
-        </div>      
+          <img [src]="product.img" class="float-end" alt="">
+        </div>
       </div>
       <div class="generaltext">
         <div class="col-md-4 text-details ">
@@ -13,7 +13,7 @@
           <p class="generaltext__parrafo1"><b>Descripción:</b> {{ product.description }}</p>
           <p class="generaltext__parrafo2"><b>Categoría:</b> {{product.category}}</p>
           <p class="price-estilo">{{ product.price|currency }}</p>
-          <button>Agregar Carrito 🛒</button>
+          <button (click)="addProductToCart(5,3)">Agregar Carrito 🛒</button>
         </div>
       </div>
     </div>
