--- a/frontend/src/app/welcome/pages/about/about.component.html
+++ b/frontend/src/app/welcome/pages/about/about.component.html
@@ -3,7 +3,7 @@
 <div class="about-us-seccion">
   <h1 class="text-bold">Nosotros:</h1>
   <div class="about-us-seccion">
-    <img class="hero__img" src="assets/curvaTostado.png"  alt="">
+    <img class="about-us-seccion img" src="assets/curvaTostado.png"  alt="Curva del Tostado">
   </div>
     <p>&nbsp;</p>
     <p>&nbsp;</p>
@@ -13,7 +13,7 @@
 <div class="about-us-seccion">
   <h1 class="text-bold">Nuestro Capuccino:</h1>
   <div class="about-us-seccion">
-    <img src="assets/Cappuccino.png" alt="">
+    <img class="about-us-seccion img" src="assets/Cappuccino.png" width="300" height="237" alt="Nuestro Capuccino">
   </div>
   <p>&nbsp;</p>
   <p>Siempre ha sido y será una cuestión de pasion y calidad. Nos apasiona saber que tenemos un compromiso social y responsable con los proveedores de los mejores granos de café, y buscamos esmerarnos en tostar los granos y mejorar la vida de la gente que los cultiva. Nuestro profundo interés, en todos estos aspectos, hace que nuestro trabajo jamás termine.</p>
@@ -23,7 +23,7 @@
 <div class="about-us-seccion">
   <h1 class="text-bold"> Nuestro Trabajo:</h1>
   <div class="about-us-seccion">
-    <img src="assets/cafe.jpeg" width="300" height="237" alt="">
+    <img class="about-us-seccion img" src="assets/cafe.jpeg" width="300" height="237" alt="Nuestro Cafe">
   </div>
   <p>&nbsp;</p>
   <p>Para nosotros es una pasion, porque lo que hacemos no es sólo un trabajo, es nuestra vida. Juntos, adoptamos la diversidad para crear un lugar que nos permita a cada uno ser unico. Nos valoramos de acuerdo a nuestros principios de trabajo.</p>
@@ -32,7 +32,7 @@
 <div class="about-us-seccion">
   <h1 class="text-bold">Nuestra comunidad:</h1>
   <div class="about-us-seccion">
-    <img src="assets/hero.jpg" width="500" height="237" alt="">
+    <img class="about-us-seccion img" src="assets/hero.jpg" width="500" height="237" alt="">
   </div>
   <p>&nbsp;</p>
   <p>Tomamos en serio nuestra responsabilidad como buenos amigos. Somos capaces de contribuir positivamente porque trabajamos para conseguir una unión entre clientes, amigos y la comunidad para cooperar cada día a día. Ahora nos damos cuenta de que la dimensión de nuestra responsabilidad y que nuestro potencial para hacer el bien son aún mayores que antes. </p>
