rediseño-background  product-details.component

--- a/frontend/src/app/products/pages/product-details/product-details.component.html
+++ b/frontend/src/app/products/pages/product-details/product-details.component.html
@@ -10,9 +10,11 @@
       <div class="generaltext">
         <div class="col-md-4 text-details ">
           <h2>{{ product.name }}</h2>
-          <p class="generaltext__parrafo1"><b>Descripción:</b> {{ product.description }}</p>
-          <p class="generaltext__parrafo2"><b>Categoría:</b> {{product.category}}</p>
-          <p class="generaltext__parrafo3"><b>Sku:</b> {{product.id}}</p>
+          <div class="generaltext__parrafos">
+            <p class="generaltext__parrafo1"><b>Descripción:</b> {{ product.description }}</p>
+            <p class="generaltext__parrafo2"><b>Categoría:</b> {{product.category}}</p>
+            <p class="generaltext__parrafo3"><b>Sku:</b> {{product.id}}</p>
+          </div>
           <p class="price-estilo">{{ product.price|currency }}</p>
           <button (click)="addProductToCart(5,3)">Agregar Carrito 🛒</button>
         </div>
