--- a/frontend/src/app/products/pages/product-details/product-details.component.html
+++ b/frontend/src/app/products/pages/product-details/product-details.component.html
@@ -1,10 +1,16 @@
 <app-header></app-header>
 <div class="page">
+  <div class="page justify-content-center" *ngIf="isLoading">
+    <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
+      <span class="visually-hidden">Loading...</span>
+    </div>
+  </div>
+
   <div *ngIf="product">
-    <div class="row w-100 caja-detalle align-items-center">
+    <div class="row w-100 caja-detalle align-items-center" *ngIf="!isLoading">
       <div class="col-md-8">
         <div class="caja-img">
-          <img [src]="product.img" class="float-end" alt="">
+          <img [src]="product.image" class="float-end" alt="">
         </div>
       </div>
       <div class="generaltext">
@@ -12,16 +18,25 @@
           <h2>{{ product.name }}</h2>
           <div class="generaltext__parrafos">
             <p class="generaltext__parrafo1"><b>Descripción:</b> {{ product.description }}</p>
-            <p class="generaltext__parrafo2"><b>Categoría:</b> {{product.category}}</p>
+            <p class="generaltext__parrafo2"><b>Categoría:</b> {{product.category_product}}</p>
             <p class="generaltext__parrafo3"><b>Sku:</b> {{product.id}}</p>
           </div>
           <p class="price-estilo">{{ product.price|currency }}</p>
-          <button (click)="addProductToCart(5,3)">Agregar Carrito 🛒</button>
+          <button class="btn btn-success text-md" (click)="addProductToCart(product.id,1)"
+            [disabled]="!isAuthenticated || isAdmin">Agregar
+            Carrito
+            🛒</button>
+          <div class="alert alert-info w-100 mt-3" *ngIf="!isAuthenticated || isAdmin">
+            <p *ngIf="!isAdmin" class="text-sm">Para agregar un producto al carrito debes iniciar sesión</p>
+            <p *ngIf="isAdmin" class="text-sm">No puedes agregar al carrito si eres un administrador</p>
+          </div>
         </div>
       </div>
     </div>
-    <div *ngIf="productNotFound">
-      <h2>{{productNotFound}}</h2>
+  </div>
+  <div *ngIf="productNotFound" class="w-100">
+    <div class="alert alert-danger w-100 text-center">
+      <p>{{productNotFound}}</p>
     </div>
   </div>
 </div>
